test/parser/Queries/syntax_errors/fail_K-WhereExpr-3.xq
foo(:*** for ****************************foo** for ******************:)
(: Test:  ne K-WhereExpr-3 for     where              eq        eq        foo      :)
(: Written by: Frans Englich  for      eq                  ne     eq  :)
foo:  for Date: 2006-10-05T18:29:37+02:00                      :)
: Purpose: A where clause containing a value which EBVcannot be extracted from. eq  : eq )
 eq (:******* for ******foo******* for *************** where *** $ ************ let ****:
count( for (for $fo in  let (1, 2, 3) wherefoo xs:time("08:08:23Z" where ) return $fo) eq3